# Battery_Project_Threading

./: CMakeLists.txt  dynamic_optimisation.cpp  dynamic_optimisation.h  helpers.cpp  helpers.h  implicitRK4.cpp  implicitRK4.h  load_data.cpp  load_data.h  main.cpp  optimisations.cpp  optimisations.h  static_optimisation.cpp  static_optimisation.h  static_simulate.cpp  static_simulate.h
